Cambio el idioma del parrafo introductorio del index

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <article class="col d-flex flex-column align-items-center">
           <h1 class="titulo">BTS ARMY</h1>
           <p>
-            Group of ARMYs from different locations who are dedicated to let the
-            world know who BTS is and prove that ARMYs is not just a Fandom but
-            a Family.
+            Grupo de ARMYs de diferentes lugares que se dedican a dejar que el
+            mundo sepa quién es BTS y demuestre que ARMY no es solo un Fandom sino
+            una familia.
           </p>
         </article>
       </div>
