Saco texto en el index y ajusto el video en los diferentes tamaños de pantalla

--- a/index.html
+++ b/index.html
@@ -101,17 +101,7 @@
             géneros en su repertorio musical. BTS es el artista con mayores
             ventas en la historia de Corea del Sur, con más de treinta millones
             en Gaon Music Chart, y mantiene el récord del álbum más vendido en
-            ese país con Map of the Soul: 7. Asimismo, es el primer y único
-            artista de habla no inglesa en ser nombrado como el artista global
-            del año (2020) por la IFPI, en estar en la lista Top Touring Artists
-            of the 2010s de Billboard y en dar un concierto —con todas las
-            entradas agotadas— en el Estadio de Wembley. Por otro lado, la
-            revista Time los incluyó en la portada de su edición internacional
-            como «Líderes de la nueva generación» y han aparecido en varios de
-            sus listados; estuvieron entre las 25 personas más influyentes en
-            Internet, desde 2017 hasta 2019, y entre las 100 personas más
-            influyentes en el mundo en 2019, en la que los apodaron «Príncipes
-            del Pop».
+            ese país con Map of the Soul: 7. 
           </p>
         </aside>
       </div>
