Pongo nombre en el title del head

--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MIEMBROS</title>
   <meta
       name="description"
       content="Esta en una pequeña reseña de los increibles miembros de BTS!"
